# ip9-task-scheduling

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp  node.xml  planner.sh  rebuild.sh  run.sh  sim_tree.xml  tree.xml
algo/: algo.h  (+2 more)
ros2_ws/src/event_system/: CMakeLists.txt  package.xml
ros2_ws/src/event_system_core/: CMakeLists.txt  package.xml
ros2_ws/src/event_system_core/src/: main.cpp
ros2_ws/src/event_system_core/src/behaviour/: accompany.h  bt_setup.h  charge.h  conversation.h  escort.h  idle.h  interrupt.h  is_active_order_type.h  logger.h  mission_control.h  search.h
ros2_ws/src/event_system_core/src/init/: cli_options.h  config_loader.h  des_application.cpp  des_application.h
ros2_ws/src/event_system_core/src/model/: battery.h  battery.hpp  context.cpp  context.h  event.cpp  event.h  event_queue.cpp  event_queue.h  i_sim_context.h  mission_manager.h  person.h  robot.cpp  robot.h  robot_state.cpp  robot_state.h
ros2_ws/src/event_system_core/src/model/event/: abort_search_event.h  appointment_end_event.h  base.h  battery_full_event.h  charge_phase_transition_event.h  drop_off_conversation_complete.h  found_person_conversation_complete.h  mission_complete_event.h  mission_dispatch_event.h  mission_start_event.h  order_arrival_event.h  person_accompany_event.h  person_transition.h  scan_aera.h  scan_complete.h  simulation_end_event.h  simulation_start_event.h  start_accompany_event.h  start_drive_event.h  start_drop_off_conversation_event.h  start_found_person_conversation_event.h  stop_drive_event.h
ros2_ws/src/event_system_core/src/model/mission/: background_mission_pool.h  interrupt_mission_slot.h  scheduled_mission_queue.h
ros2_ws/src/event_system_core/src/observer/: event_bus.h  gz.h  metrics.h  observer.h  ros.h  ros_observer.h  term.h
ros2_ws/src/event_system_core/src/plugin/: i_order.h  i_order_plugin.h
ros2_ws/src/event_system_core/src/plugins/: i_order.h  i_order_plugin.h  order_registry.h
ros2_ws/src/event_system_core/src/plugins/accompany/: accompany.h  accompany_order.h  accompany_plugin.cpp  accompany_plugin.h  accompany_subtree.h  conversation.h  search.h  states.cpp  states.h
ros2_ws/src/event_system_core/src/plugins/accompany/bt_nodes/: accompany.h  conversation.h  search.h
ros2_ws/src/event_system_core/src/plugins/accompany/events/: abort_search_event.h  appointment_end_event.h  drop_off_conversation_complete.h  found_person_conversation_complete.h  person_accompany_event.h  scan_aera.h  scan_complete.h  start_accompany_event.h  start_drop_off_conversation_event.h  start_found_person_conversation_event.h
ros2_ws/src/event_system_core/src/plugins/charge/: charge_order.h  charge_plugin.cpp  charge_plugin.h  charge_subtree.h
ros2_ws/src/event_system_core/src/plugins/charge/bt_nodes/: charge_mission.h
ros2_ws/src/event_system_core/src/plugins/charge/events/: end_charge_event.h  start_charge_event.h
ros2_ws/src/event_system_core/src/plugins/clean/: clean_order.h  clean_plugin.cpp  clean_plugin.h  clean_subtree.h  states.cpp  states.h
ros2_ws/src/event_system_core/src/plugins/clean/bt_nodes/: clean.h
ros2_ws/src/event_system_core/src/plugins/clean/events/: end_clean_event.h  start_clean_event.h
ros2_ws/src/event_system_core/src/plugins/data_acquisition/: data_acquisition_order.h  data_acquisition_plugin.cpp  data_acquisition_plugin.h  data_acquisition_subtree.h  states.cpp  states.h
ros2_ws/src/event_system_core/src/plugins/data_acquisition/bt_nodes/: acquisition.h
ros2_ws/src/event_system_core/src/plugins/data_acquisition/events/: execute_acquisition_event.h  (+1 more)
ros2_ws/src/event_system_core/src/plugins/information/: information_order.h  information_plugin.cpp  information_plugin.h  information_subtree.h  states.cpp  states.h
ros2_ws/src/event_system_core/src/runner/: runner.cpp  runner.h
ros2_ws/src/event_system_core/src/runner/impl/: headless_runner.cpp  headless_runner.h  sim_runner.cpp  sim_runner.h  snapshot_builder.h
ros2_ws/src/event_system_core/src/sim/: gz_lib.h  i_path_planner.h  matrix_planner.h  scheduler.h
ros2_ws/src/event_system_core/src/sim/ros/: config.h  controller.h  marker.h  path_node.h
ros2_ws/src/event_system_core/src/util/: data.h  db.h  dist_mat.h  log.h  rnd.h  types.h
ros2_ws/src/event_system_core/src/view/: timeline.h
ros2_ws/src/event_system_core/test/: test_battery.cpp  test_config_loader.cpp  test_db.cpp  test_event_queue.cpp  test_events.cpp  test_integration.cpp  test_mission_manager.cpp  test_scheduler.cpp
ros2_ws/src/event_system_core/test/fixtures/: invalid_appointments.json  test_appointments.json  test_employees.json  test_sim_config.json
ros2_ws/src/event_system_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/event_system_msgs/msg/: MetricsReport.msg  SystemConfig.msg  TimelineBattery.msg  TimelineEvent.msg  TimelineMeeting.msg  TimelineMove.msg  TimelineReset.msg  TimelineStateChange.msg
ros2_ws/src/event_system_msgs/srv/: SetSystemConfig.srv  SetSystemState.srv
ros2_ws/src/event_system_rviz/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
ros2_ws/src/event_system_rviz/include/event_system_rviz/: battery_track.hpp  des_metrics_panel.hpp  des_occupancy_panel.hpp  des_panel.hpp  des_swimlane_panel.hpp  des_system_config.hpp  des_timeline_panel.hpp  marker_track.hpp  state_track.hpp  timeline.hpp  timeline_track.hpp  timeline_types.hpp
ros2_ws/src/event_system_rviz/include/event_system_rviz/timeline/: battery_track.hpp  drive_track.hpp  marker_track.hpp  state_track.hpp  timeline.hpp  timeline_track.hpp  timeline_types.hpp
ros2_ws/src/event_system_rviz/src/: des_metrics_panel.cpp  des_occupancy_panel.cpp  des_panel.cpp  des_swimlane_panel.cpp  des_system_config.cpp  des_timeline_panel.cpp
ros2_ws/src/event_system_tf_transform/: CMakeLists.txt  package.xml
ros2_ws/src/event_system_tf_transform/src/: transform_node.cpp
rviz_plugin/des_panel/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
rviz_plugin/des_panel/include/des_panel/: des_panel.hpp
rviz_plugin/des_panel/src/: des_panel.cpp
(+170 files in other folders)
