<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>des_panel</name>
  <version>0.0.0</version>
  <description>Plugin to manage Descrete Event System</description>
  <maintainer email="andri.wild@students.fhnw.ch">Andri Wild</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>des_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
