<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>event_system</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="andri.wild@students.fhnw.ch">Andri Wild</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>event_system_bringup</depend>
    <depend>event_system_core</depend>
    <depend>event_system_rviz</depend>
    <depend>event_system_tf_transform</depend>
    <depend>event_system_interfaces</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
