<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>event_system_core</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="andri.wild@students.fhnw.ch">Andri Wild</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>behaviortree_cpp</depend>
    <depend>rclcpp</depend>
    <depend>tf2_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>nlohmann_json</depend>
    <depend>gz-math8</depend>
    <depend>gz-transport13</depend>
    <depend>event_system_interfaces</depend>
    <depend>nav2_msgs</depend>
    <build_depend>qtbase5-dev</build_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
